Fixed some alignment issues, added nav menu icons and added food dropdown menu.

--- a/src/nav-menu/nav-menu.css
+++ b/src/nav-menu/nav-menu.css
@@ -7,12 +7,34 @@
 }
 
 .NavItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     margin: 0.25rem 0 0.25rem 0;
-    padding: 0.2rem;
+    padding: 0.2rem 0.5rem;
     cursor: pointer;
 }
 
 .NavItem:hover {
     color: #000000;
     background-color: #FFFFFF;
+}
+
+@keyframes NavItemDropDownGrow {
+    from { max-height: 0; }
+    to { max-height: 200px; }
+}
+
+.DropdownMenu {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    padding-left: 2rem;
+    animation: NavItemDropDownGrow 1.15s;
+}
+
+.NavIcon {
+    width: 1.25rem;
+    height: 1.25rem;
+    margin: 0 0.5rem 0 0;
 }
